--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       <h1>Congratulations!</h1>
       <h2>You just made your first GitHub deployment.</h2>
       <p>This could be really cool. But is it?</p>
+      <p>It could be!</p>
     </main>
   </body>
 </html>
